--- a/blogcanhan.html
+++ b/blogcanhan.html
@@ -4,6 +4,7 @@
 	<title>Nhật ký của tôi</title>
 
     <style>
+	    <link rel="stylesheet" href="style.css">
 p{
     margin-right: 150px;
     text-align: justify;
